@@ -5,11 +5,18 @@ using System.Data;
 using System.Drawing;
 using System.Text;
 using System.Windows.Forms;
+using ResourceManager.Translation;
+using System.IO;
+using GitCommands;
 
 namespace GitUI
 {
     public partial class FormTag : GitExtensionsForm
     {
+        TranslationString noTagMassage = new TranslationString("Please enter a tag message");
+        TranslationString noRevisionSelected = new TranslationString("Select 1 revision to create the tag on.");
+        TranslationString messageCaption = new TranslationString("Tag");
+
         public FormTag()
         {
             InitializeComponent(); Translate();
@@ -37,18 +44,47 @@ namespace GitUI
 
                 if (GitRevisions.GetRevisions().Count != 1)
                 {
-                    MessageBox.Show("Select 1 revision to create the tag on.", "Tag");
+                    MessageBox.Show(noRevisionSelected.Text, messageCaption.Text);
                     return;
                 }
+                else
+                {
+                    if (annotate.Checked)
+                    {
+                        if (string.IsNullOrEmpty(tagMessage.Text))
+                        {
+                            MessageBox.Show(noTagMassage.Text, messageCaption.Text);
+                            return;
+                        }
 
-                MessageBox.Show("Command executed \n" + GitCommands.GitCommands.Tag(Tagname.Text, GitRevisions.GetRevisions()[0].Guid), "Tag");
+                        File.WriteAllText(Settings.WorkingDirGitDir() + "\\TAGMESSAGE", tagMessage.Text);
+                    }
 
-                Close();
+
+                    string s = GitCommands.GitCommands.Tag(Tagname.Text, GitRevisions.GetRevisions()[0].Guid, annotate.Checked);
+
+                    if (!string.IsNullOrEmpty(s))
+                        MessageBox.Show(s, "Tag");
+                    Close();
+                }
             }
-            catch
+            catch(Exception ex)
             {
+                MessageBox.Show(ex.Message);
             }
 
+        }
+
+        private void annotate_CheckedChanged(object sender, EventArgs e)
+        {
+            if (annotate.Checked)
+            {
+                tagMessage.Enabled = true;
+            }
+            else
+            {
+                tagMessage.Enabled = false;
+            }
         }
     }
 }
